# Spotify-Gif-Player

./: .env.example  .gitignore  README.md  SETUP.md  index.html  package-lock.json  package.json  vite.config.ts
auth-server/: package.json
auth-server/authorization_code/: app.js
client/: package-lock.json  package.json
client/src/: App.js  App1.js  App2.js  AppGenreComments.js  AppTestGenres.js  genreFunction.jsx  gifList.json  index.css
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: Toast.tsx
src/hooks/: useGiphy.ts  useSpotify.ts
src/lib/: apiLogger.ts  auth.ts  genreSearchTerms.ts  giphy.ts  klipy.ts  lastfm.ts  spotify.ts  store.ts
src/styles/: global.css
src/views/: DebugView.tsx  LoginView.tsx  MetadataView.tsx  PlayerView.tsx
